acknowledgements and codes

--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -195,8 +195,16 @@ We formulate and fit a Landau model based on the experimental measurements with 
 Finally, we conclude this Thesis in Chapter~\ref{ch:Softening} by a systematic study of the implications on the mechanical properties of 180$^\circ$ ferroelectric domain walls in BaTiO$_3$, due to the interaction between strain and the polarization.
 Surprisingly, these walls appear mechanically softer to a tip applied to the surface of the sample, even though they are not ferroelastic and thus do not separate domains with different strain textures.
 Based on the experimental observations and a numerical simulation, we uncover that the mechanical interaction between the tip and domain wall localized phonons explains the apparent softening.
-% \chapter*{Acknowledgements}
-% First and foremost I would like to thank my supervisor Dr. Sergey Artyukhin for the wonderful opportunities I was offered during my PhD. The freedom that he gave me to pursue my many interests has allowed me to develop my knowledge and skills in many areas of Condensed Matter Physics, while providing me with all the answers to the many questions I had, with most illuminating, engaging, and fruitful discussions, and with overall excellent guidance and support. 
+
+\chapter*{Acknowledgements}
+First and foremost I would like to thank my supervisor Dr. Sergey Artyukhin for the wonderful opportunities I was offered during my Ph.D. The freedom and encouragement that he gave me to pursue my many interests have allowed me to develop my knowledge and skills in many areas of Condensed Matter Physics, while providing me with all the answers to the many questions I had, with most illuminating, engaging, and fruitful discussions, and with overall incredible guidance and support.  I would, furthermore, like to thank Prof. David Vanderbilt and Prof. Stefan Bl\"ugel for allowing me to visit their group, which broadened my scientific horizon and led to many engaging experiences. I also wish to thank Prof. Maxim Mostovoy, Prof. Sang-Wook Cheong, Prof. Andrei Pimenov, Prof. Andrei Singer, and Prof. Gustau Catalan for their insights and wonderful collaborations. Reflecting on the academic steps that ultimately brought me to this point, I can not help but feel a deep gratitude towards Meneer Koen Geeraert for providing the initial matchstick that ignited my passion for physics.
+
+I wish to thank the many friends I got to know along this journey for providing me with an ever kind and pleasant environment. I will never forget the many discussions on numerical codes and techniques I had with Peng, some more heated than others, all of them rewarding. Giulia and Francesco were never faltering presences of kindness and joy in our office, either through music, or origami dinosaurs. In the later years, I got to share in the wisdom of Gabriele and the humor of Michele, dark and cynical, or otherwise. The first year I spent at Scuola Normale, I'll never forget. The true close-knit group of friends I found there led me to experience truly spectacularly fun moments. I will always cherish the never-ending battle fought with Paolo, Gianmichele, and Pietro on the billiardino, the calm composure of Bibek, and deep conversations with Marcello and Donato, all topped off by a bit of benzina during our nightly endeavors.
+I would also like to take this moment to truly thank my friends back home for remaining an ever-reliable source of fun, happiness, and support. Florian in particular has seen all the ups and downs I went through on this, sometimes tumultuous, journey, providing me with never-ending camaraderie, deep conversations, cat videos of every variety, beverages of every color, and consolation in more trying times.
+
+I thank my sister Marie for always being a listening ear, and my brother Philippe for sharing with me his passion for all things computers and games, and both of them for always believing in me.
+
+This brings me, finally, to my Mother and Father, whom I can not thank enough for the many opportunities, endless support, unconditional love, perpetual encouragement, and cautious patience they have given me. I truly could not have wished for more fantastic parents. 
 % \Include{Publications}
 % \setcounter{tocdepth}{1}
 % \tableofcontents
@@ -212,7 +220,8 @@ Based on the experimental observations and a numerical simulation, we uncover th
 % \Include{DFT}
 % \Include{Wannier}
 % \Include{FEM}
-% \backmatter
-% \bibliography{references}
-% \printindex
+\Include{codes}
+\backmatter
+\bibliography{references}
+\printindex
 \end{document}
